--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,8 @@
   "description": "life-care",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js"
+    "start": "node app.ts",
+    "dev": "nodemon"
   },
   "keywords": [],
   "author": "",
@@ -13,12 +13,14 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "pg": "^8.11.3",
-    "pg-hstore": "^2.3.4",
-    "sequelize": "^6.35.2"
+    "express": "^4.18.2"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "@types/bcrypt": "^5.0.2",
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.21",
+    "nodemon": "^3.0.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
