--- a/server/package.json
+++ b/server/package.json
@@ -15,11 +15,13 @@
     "@types/nodemailer": "^6.4.14",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
+    "date-fns": "^3.3.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
-    "nodemailer": "^6.9.8"
+    "nodemailer": "^6.9.8",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
