--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.8",
+    "redis": "^4.6.12",
     "winston": "^3.11.0"
   },
   "devDependencies": {
